# ash

./: .gitignore  Cargo.toml  README.md  ash.config.json  p2  pippo.xml  rustfmt.toml  tsh.json  vscode.tmp
.github/workflows/: release.yml  rust.yml
bak/: aws_cli.rs  aws_sdk.rs
res/: sshconfig.pest  template.for.sshconfig.hbs
scoop/: ash.json  update.ps1
scripts/: publish.ps1  release-win.ps1  update-scoop-manifest.ps1
src/: aws.rs  commands.rs  config.rs  describe_instances.rs  executable.rs  history.rs  main.rs  not_empty_string.rs  option_not_empty_string.rs  options.rs  prelude.rs  select.rs  settings.rs  ssh.rs  ssh_config_parser.rs  teleport.rs
src/parsers/: ini_parser.rs  mod.rs  ssh_config_parser.rs
src/parsers/pegs/: ini.pest  sshconfig.pest
