[package]
name = "ash"
version = "0.2.1"
edition = "2021"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
directories = "4.0.1"
handlebars = "4.3.5"
itertools = "0.10.5"
http = "0.2.8"
minreq = { version = "2.6.0", features = ["https"] }
aws-sigv4 = "0.51.0"
roxmltree = "0.15.1"
chrono = "0.4.22"
regex = "1.6.0"
once_cell = "1.16.0"
pest = "2.4.1"
pest_derive = "2.4.1"
fuzzy-matcher = "0.3.7"
eyre = { version = "0.6" }
strum = "0.24.1"
strum_macros = "0.24.1"
egui = "0.19.0"
eframe = "0.19.0"
poll-promise = "0.2.0"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
lto = true
opt-level = "z" # Optimize for size.
panic = "abort"
